--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Grammar Server",
+            "name": "Start local server (uvicorn)",
             "type": "python",
             "request": "launch",
             "module": "uvicorn",
@@ -15,21 +15,51 @@
             ]
         },
         {
-            "name": "Build docker image",
+            "name": "Start local server (gunicorn)",
             "request": "launch",
-            "command": "gcloud builds submit --tag=us.gcr.io/chatbot-299615/chatbot-grammar:latest --timeout=3600",
+            "command": "source env/bin/activate && gunicorn --workers 1 --worker-class uvicorn.workers.UvicornWorker --threads 8 main:app",
+            "type": "node-terminal"
+        },
+        {
+            "name": "Cloud Build: Build docker image",
+            "request": "launch",
+            "command": "gcloud builds submit --tag=${config:DOCKER_IMAGE_TAG} --timeout=3600",
             "type": "node-terminal",
         },
         {
-            "name": "Deploy docker image",
+            "name": "Cloud Run: Deploy docker image",
             "request": "launch",
-            "command": "gcloud run deploy chatbot-grammar --image=us.gcr.io/chatbot-299615/chatbot-rte:latest --platform=managed --concurrency=1 --set-env-vars=MKL_NUM_THREADS=2,OMP_NUM_THREADS=2,NUMEXPR_NUM_THREADS=2 --cpu=2 --memory=3G --allow-unauthenticated",
-            "type": "node-terminal",
+            "command": "gcloud run deploy ${config:DOCKER_CONTAINER_NAME} --image=${config:DOCKER_IMAGE_TAG} --platform=managed --cpu=2 --memory=4G --allow-unauthenticated",
+            "type": "node-terminal"
         },
         {
             "name": "Show logs",
             "request": "launch",
             "command": "gcloud app logs tail -s default",
+            "type": "node-terminal",
+        },
+        {
+            "name": "Docker: Pull container from cloud",
+            "request": "launch",
+            "command": "docker pull ${config:DOCKER_IMAGE_TAG}",
+            "type": "node-terminal",
+        },
+        {
+            "name": "Docker: Build container locally",
+            "request": "launch",
+            "command": "docker build -t ${config:DOCKER_CONTAINER_NAME} .",
+            "type": "node-terminal",
+        },
+        {
+            "name": "Docker: Run bash in container",
+            "request": "launch",
+            "command": "docker pull ${config:DOCKER_IMAGE_TAG} && docker run -it ${config:DOCKER_IMAGE_TAG} bash",
+            "type": "node-terminal",
+        },
+        {
+            "name": "Docker: Run container locally",
+            "request": "launch",
+            "command": "docker pull ${config:DOCKER_IMAGE_TAG} && PORT=8080 && docker run -p 9090:${PORT} -e PORT=${PORT} --memory=2g --cpus=2 ${config:DOCKER_IMAGE_TAG}",
             "type": "node-terminal",
         }
     ]
