--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ scikit-learn==0.20.0
 sentencepiece==0.1.91
 fastapi==0.63.0
 pydantic==1.8.1
+gunicorn==20.0.4
+uvicorn==0.13.4
+uvloop==0.15.2
+watchgod==0.7
+websockets==8.1
+httptools==0.1.1
+python-dotenv==0.15.0
